--- a/SeboVideoPlayer/Libraries/SeboVideoPlayer/Subviews/SeboViewPlayerVideoView.xib
+++ b/SeboVideoPlayer/Libraries/SeboVideoPlayer/Subviews/SeboViewPlayerVideoView.xib
@@ -14,9 +14,24 @@
         <view contentMode="scaleToFill" id="0Z8-dN-T7B" customClass="SeboViewPlayerVideoView" customModule="SeboVideoPlayer" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="186"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ph-Y2-aWB">
+                    <rect key="frame" x="355" y="176" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="WrZ-ca-dlm" firstAttribute="bottom" secondItem="0Ph-Y2-aWB" secondAttribute="bottom" constant="10" id="NZS-ie-Azg"/>
+                <constraint firstItem="WrZ-ca-dlm" firstAttribute="trailing" secondItem="0Ph-Y2-aWB" secondAttribute="trailing" constant="20" id="TZP-Um-8jD"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="WrZ-ca-dlm"/>
+            <connections>
+                <outlet property="timeCountLabel" destination="0Ph-Y2-aWB" id="Zb2-hm-mhl"/>
+            </connections>
             <point key="canvasLocation" x="26.5" y="-19"/>
         </view>
     </objects>
