--- a/SeboVideoPlayer/Libraries/SeboVideoPlayer/Subviews/SeboViewPlayerSlidesView.xib
+++ b/SeboVideoPlayer/Libraries/SeboVideoPlayer/Subviews/SeboViewPlayerSlidesView.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="186"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L5R-hc-qFg">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L5R-hc-qFg">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="186"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 / 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loL-YO-aO4">
